[package]
name = "ojos"
version = "1.0.1"
authors = ["Ojos Project"]
edition = "2021"
description = "A CLI tool to help create frontend-related tasks."
repository = "https://github.com/ojosproject/cli/"
homepage = "https://github.com/ojosproject/cli/"
readme = "./README.md"
license = "GPL-3.0-only"
exclude = [".github", ".vscode"]


[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
