[package]
name = "ojos"
version = "1.2.1"
authors = ["Ojos Project"]
edition = "2021"
description = "A CLI tool to help create frontend-related tasks."
repository = "https://github.com/ojosproject/cli/"
homepage = "https://github.com/ojosproject/cli/"
readme = "./README.md"
license = "GPL-3.0-only"
exclude = [".github", ".vscode", "docs"]


[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
reqwest = {version = "0.12.5", features = ["json", "blocking", "multipart"]}
